bpo-44632: Fix support of TypeVar in the union type (GH-27139)

int | TypeVar('T') returns now an instance of types.Union
instead of typing.Union.